--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "RAE-Framework",
-  "version": "1.0.0",
-  "description": "LESS/CSS Framework",
-  "main": "gulpfile.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "test": "test"
-  },
-  "keywords": [
+    "name": "RAE-Framework",
+    "version": "1.0.0",
+    "description": "LESS/CSS Framework",
+    "homepage": "http://www.rae.fi",
+    "main": "gulpfile.js",
+    "directories": {
+        "doc": "docs"
+    },
+    "scripts": {
+        "test": "test"
+    },
+    "keywords": [
     "rae-framework",
     "css",
     "less",
@@ -18,33 +19,33 @@
     "lightweight",
     "responsive"
   ],
-  "author": "Jere Paajanen",
-  "license": "MIT",
-  "devDependencies": {
-    "apache-server-configs": "^2.11.0",
-    "browser-sync": "^2.2.1",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-consolidate": "^0.1.2",
-    "gulp-csso": "^1.0.0",
-    "gulp-ftp": "^1.0.3",
-    "gulp-header": "^1.2.2",
-    "gulp-iconfont": "^1.0.0",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jshint": "^1.9.2",
-    "gulp-less": "^3.0.1",
-    "gulp-load-plugins": "^0.8.1",
-    "gulp-minify-html": "^1.0.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-size": "^1.2.1",
-    "gulp-uglify": "^1.1.0",
-    "gulp-useref": "^1.1.1",
-    "jshint-stylish": "^1.0.1",
-    "lodash": "^3.3.1",
-    "opn": "^1.0.1",
-    "run-sequence": "^1.0.2"
-  }
+    "author": "Jere Paajanen",
+    "license": "MIT",
+    "devDependencies": {
+        "apache-server-configs": "^2.13.0",
+        "browser-sync": "^2.2.3",
+        "del": "^1.1.1",
+        "gulp": "^3.8.11",
+        "gulp-autoprefixer": "^2.1.0",
+        "gulp-consolidate": "^0.1.2",
+        "gulp-csso": "^1.0.0",
+        "gulp-ftp": "^1.0.3",
+        "gulp-header": "^1.2.2",
+        "gulp-iconfont": "^1.0.0",
+        "gulp-if": "^1.2.5",
+        "gulp-imagemin": "^2.2.1",
+        "gulp-jshint": "^1.9.2",
+        "gulp-less": "^3.0.1",
+        "gulp-load-plugins": "^0.8.1",
+        "gulp-htmlmin": "^1.1.1",
+        "gulp-rename": "^1.2.0",
+        "gulp-replace": "^0.5.3",
+        "gulp-size": "^1.2.1",
+        "gulp-uglify": "^1.1.0",
+        "gulp-useref": "^1.1.1",
+        "jshint-stylish": "^1.0.1",
+        "lodash": "^3.5.0",
+        "opn": "^1.0.1",
+        "run-sequence": "^1.0.2"
+    }
 }
