--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,14 @@
   "name": "RAE-Framework",
   "version": "1.0.0",
   "dependencies": {
-
+    "jquery": "~2.1.3"
   },
-    "overrides": {
-        "BOWER-PACKAGE-NAME": {
-            "main": ["**/*.js", "filename.js"]
-        }
+  "overrides": {
+    "BOWER-PACKAGE-NAME": {
+      "main": [
+        "**/*.js",
+        "filename.js"
+      ]
     }
+  }
 }
