--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "gulp-size": "^1.2.1",
         "gulp-uglify": "^1.1.0",
         "gulp-useref": "^1.1.1",
+        "gulp-inject": "^1.2.0",
+        "main-bower-files": "^2.5.0",
         "jshint-stylish": "^1.0.1",
         "lodash": "^3.5.0",
         "opn": "^1.0.1",
