update dependencies, change gulp-ftp to vinyl ftp

--- a/ftp-config-sample.json
+++ b/ftp-config-sample.json
@@ -1,8 +1,9 @@
 {
     "server": {
-        "host": "ftp.***.com",
-        "remotePath": "",
+        "host": "ftp.myserver.com",
         "user": "",
-        "pass": ""
+        "password": "",
+        "port": "21",
+        "remotePath": ""
     }
 }
