--- a/package.json
+++ b/package.json
@@ -23,20 +23,19 @@
     "license": "MIT",
     "devDependencies": {
         "apache-server-configs": "^2.13.0",
-        "browser-sync": "^2.3.0",
+        "browser-sync": "^2.4.1",
         "del": "^1.1.1",
         "gulp": "^3.8.11",
         "gulp-autoprefixer": "^2.1.0",
         "gulp-consolidate": "^0.1.2",
         "gulp-csso": "^1.0.0",
-        "gulp-ftp": "^1.0.3",
         "gulp-header": "^1.2.2",
         "gulp-iconfont": "^1.0.0",
         "gulp-if": "^1.2.5",
         "gulp-imagemin": "^2.2.1",
-        "gulp-jshint": "^1.9.2",
-        "gulp-less": "^3.0.1",
-        "gulp-load-plugins": "^0.8.1",
+        "gulp-jshint": "^1.9.4",
+        "gulp-less": "^3.0.2",
+        "gulp-load-plugins": "^0.9.0",
         "gulp-htmlmin": "^1.1.1",
         "gulp-rename": "^1.2.0",
         "gulp-replace": "^0.5.3",
@@ -46,7 +45,8 @@
         "gulp-inject": "^1.2.0",
         "main-bower-files": "^2.6.2",
         "jshint-stylish": "^1.0.1",
-        "lodash": "^3.5.0",
+        "lodash": "^3.6.0",
+        "vinyl-ftp": "^0.4.0",
         "opn": "^1.0.1",
         "run-sequence": "^1.0.2"
     }
