--- a/ftp-config-sample.json
+++ b/ftp-config-sample.json
@@ -1,8 +1,8 @@
 {
     "server": {
         "host": "ftp.myserver.com",
-        "user": "",
-        "password": "",
+        "user": "username",
+        "password": "password",
         "port": "21",
         "remotePath": ""
     }
