--- a/package.json
+++ b/package.json
@@ -1,53 +1,57 @@
 {
-    "name": "RAE-Framework",
-    "version": "1.2.1",
-    "description": "LESS/CSS Framework",
-    "homepage": "http://www.rae.fi",
-    "main": "gulpfile.js",
-    "directories": {
-        "doc": "docs"
-    },
-    "scripts": {
-        "test": "test"
-    },
-    "keywords": [
+  "name": "RAE-Framework",
+  "version": "1.2.1",
+  "description": "LESS/CSS Framework",
+  "homepage": "http://www.rae.fi",
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jerepaajanen/RAE-Framework.git"
+  },
+  "devDependencies": {
+    "apache-server-configs": "^2.14.0",
+    "browser-sync": "^2.7.4",
+    "del": "^1.2.0",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.3.0",
+    "gulp-combine-media-queries": "^0.2.0",
+    "gulp-consolidate": "^0.1.2",
+    "gulp-csso": "^1.0.0",
+    "gulp-favicons": "^1.0.9",
+    "gulp-header": "^1.2.2",
+    "gulp-iconfont": "^1.0.1",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-inject": "^1.2.0",
+    "gulp-inject-string": "0.0.2",
+    "gulp-jshint": "^1.11.0",
+    "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-html": "^1.0.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.3",
+    "gulp-size": "^1.2.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-useref": "^1.1.2",
+    "jshint-stylish": "^2.0.0",
+    "lodash": "^3.9.1",
+    "main-bower-files": "^2.8.0",
+    "opn": "^1.0.2",
+    "run-sequence": "^1.1.0",
+    "vinyl-ftp": "^0.4.1"
+  },
+  "scripts": {
+    "test": "gulp"
+  },
+  "keywords": [
     "rae-framework",
     "css",
     "less",
     "framework",
     "mobile-first",
-    "lightweight",
+    "scaffold",
     "responsive"
   ],
-    "author": "Jere Paajanen",
-    "license": "MIT",
-    "devDependencies": {
-        "apache-server-configs": "^2.14.0",
-        "browser-sync": "^2.7.1",
-        "del": "^1.1.1",
-        "gulp": "^3.8.11",
-        "gulp-autoprefixer": "^2.2.0",
-        "gulp-consolidate": "^0.1.2",
-        "gulp-csso": "^1.0.0",
-        "gulp-header": "^1.2.2",
-        "gulp-iconfont": "^1.0.0",
-        "gulp-if": "^1.2.5",
-        "gulp-imagemin": "^2.2.1",
-        "gulp-jshint": "^1.10.0",
-        "gulp-less": "^3.0.3",
-        "gulp-load-plugins": "^0.10.0",
-        "gulp-minify-html": "^1.0.2",
-        "gulp-rename": "^1.2.2",
-        "gulp-replace": "^0.5.3",
-        "gulp-size": "^1.2.1",
-        "gulp-uglify": "^1.2.0",
-        "gulp-useref": "^1.1.2",
-        "gulp-inject": "^1.2.0",
-        "main-bower-files": "^2.7.1",
-        "jshint-stylish": "^1.0.2",
-        "lodash": "^3.8.0",
-        "vinyl-ftp": "^0.4.1",
-        "opn": "^1.0.2",
-        "run-sequence": "^1.1.0"
-    }
+  "author": "Jere Paajanen",
+  "license": "MIT"
 }
