--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
   },
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
-    "browser-sync": "^2.7.5",
+    "browser-sync": "^2.7.6",
     "del": "^1.2.0",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.3.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-consolidate": "^0.1.2",
     "gulp-csso": "^1.0.0",
     "gulp-favicons": "^1.0.9",
     "gulp-header": "^1.2.2",
-    "gulp-iconfont": "^1.0.1",
+    "gulp-iconfont": "^2.0.0",
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-inject": "^1.2.0",
     "gulp-inject-string": "0.0.2",
     "gulp-jshint": "^1.11.0",
     "gulp-less": "^3.0.3",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-html": "^1.0.2",
+    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-minify-html": "^1.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-size": "^1.2.1",
     "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^1.1.2",
+    "gulp-useref": "^1.2.0",
     "jshint-stylish": "^2.0.0",
     "lodash": "^3.9.3",
     "main-bower-files": "^2.8.0",
