--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
-    "browser-sync": "^2.7.7",
+    "browser-sync": "^2.7.12",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
@@ -19,25 +19,25 @@
     "gulp-csso": "^1.0.0",
     "gulp-favicons": "^1.0.9",
     "gulp-header": "^1.2.2",
-    "gulp-iconfont": "^2.0.0",
+    "gulp-iconfont": "^3.0.2",
     "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-inject": "^1.3.0",
-    "gulp-inject-string": "0.0.2",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-inject": "^1.3.1",
+    "gulp-inject-string": "^0.0.2",
     "gulp-jshint": "^1.11.0",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^1.0.0-rc",
     "gulp-minify-html": "^1.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
-    "gulp-size": "^1.2.1",
+    "gulp-size": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.2.0",
-    "jshint-stylish": "^2.0.0",
+    "jshint-stylish": "^2.0.1",
     "lodash": "^3.9.3",
     "main-bower-files": "^2.8.0",
-    "opn": "^1.0.2",
-    "run-sequence": "^1.1.0",
+    "opn": "^2.0.1",
+    "run-sequence": "^1.1.1",
     "vinyl-ftp": "^0.4.1"
   },
   "scripts": {
