--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "RAE-Framework",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "LESS/CSS Framework",
   "homepage": "http://www.rae.fi",
   "main": "gulpfile.js",
@@ -10,10 +10,10 @@
   },
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
-    "browser-sync": "^2.9.10",
+    "browser-sync": "^2.9.11",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.2",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-consolidate": "^0.1.2",
     "gulp-csso": "^1.0.0",
@@ -21,17 +21,17 @@
     "gulp-header": "^1.7.1",
     "gulp-iconfont": "^3.1.2",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.3.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
     "gulp-inject-string": "^0.0.2",
-    "gulp-jshint": "^1.11.2",
+    "gulp-jshint": "^1.12.0",
     "gulp-less": "^3.0.3",
-    "gulp-load-plugins": "^1.0.0-rc",
+    "gulp-load-plugins": "^1.0.0",
     "gulp-minify-html": "^1.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-size": "^2.0.0",
-    "gulp-uglify": "^1.4.1",
+    "gulp-uglify": "^1.4.2",
     "gulp-useref": "^1.3.0",
     "jshint-stylish": "^2.0.1",
     "lodash": "^3.10.1",
