--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rae-framework",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "LESS/CSS Framework",
   "author": "RAE – Jere Paajanen <https://rae.fi>",
   "homepage": "http://www.rae.fi",
@@ -23,17 +23,17 @@
   "license": "MIT",
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
+    "autoprefixer": "^6.1.0",
     "browser-sync": "^2.10.0",
+    "css-mqpacker": "^4.0.0",
+    "cssnano": "^3.3.2",
     "del": "^2.1.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.0",
     "gulp-changed": "^1.3.0",
-    "gulp-combine-media-queries": "^0.2.0",
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.1.2",
-    "gulp-csso": "^1.0.1",
-    "gulp-favicons": "^2.1.0",
+    "gulp-favicons": "^2.1.1",
     "gulp-header": "^1.7.1",
     "gulp-iconfont": "^5.0.0",
     "gulp-if": "^2.0.0",
@@ -42,6 +42,7 @@
     "gulp-less": "^3.0.5",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-html": "^1.0.4",
+    "gulp-postcss": "^6.0.1",
     "gulp-preprocess": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
