--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
-    "autoprefixer": "^6.1.0",
+    "autoprefixer": "^6.1.1",
     "browser-sync": "^2.10.0",
     "css-mqpacker": "^4.0.0",
     "cssnano": "^3.3.2",
@@ -33,15 +33,15 @@
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.1.2",
-    "gulp-favicons": "^2.1.1",
+    "gulp-favicons": "^2.1.3",
     "gulp-header": "^1.7.1",
-    "gulp-iconfont": "^5.0.0",
+    "gulp-htmlclean": "^2.7.6",
+    "gulp-iconfont": "^5.0.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^1.12.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-minify-html": "^1.0.4",
     "gulp-postcss": "^6.0.1",
     "gulp-preprocess": "^1.2.0",
     "gulp-rename": "^1.2.2",
@@ -49,14 +49,14 @@
     "gulp-size": "^2.0.0",
     "gulp-task-listing": "^1.0.1",
     "gulp-ttf2woff": "^1.1.0",
-    "gulp-ttf2woff2": "^2.0.0",
+    "gulp-ttf2woff2": "^2.0.2",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "jshint-stylish": "^2.1.0",
     "lodash": "^3.10.1",
     "main-bower-files": "^2.9.0",
     "minimist": "^1.2.0",
-    "run-sequence": "^1.1.4",
+    "run-sequence": "^1.1.5",
     "vinyl-ftp": "^0.4.5"
   },
   "scripts": {
