Separate utils, grid. Button, grid namespacing and minor fixes

--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
         "fontName": "icons",
         "className": "icon",
         "gridSize": 32,
-        "baselineShift": 8,
-        "autohint": false
+        "baselineShift": 5,
+        "autohint": true
     }
 }
