--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   "license": "MIT",
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
-    "autoprefixer": "^6.1.2",
-    "browser-sync": "^2.10.0",
+    "autoprefixer": "^6.3.1",
+    "browser-sync": "^2.11.1",
     "css-mqpacker": "^4.0.0",
-    "cssnano": "^3.3.2",
-    "del": "^2.1.0",
+    "cssnano": "^3.4.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-cache": "^0.4.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.1.2",
-    "gulp-favicons": "^2.1.3",
+    "gulp-favicons": "^2.2.5",
     "gulp-header": "^1.7.1",
     "gulp-htmlclean": "^2.7.6",
     "gulp-iconfont": "^5.0.1",
@@ -41,7 +41,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
     "gulp-less": "^3.0.5",
-    "gulp-load-plugins": "^1.1.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
@@ -52,9 +52,10 @@
     "gulp-ttf2woff2": "^2.0.2",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
-    "lodash": "^3.10.1",
-    "main-bower-files": "^2.9.0",
+    "lodash": "^4.0.0",
+    "main-bower-files": "^2.11.1",
     "minimist": "^1.2.0",
     "run-sequence": "^1.1.5",
     "vinyl-ftp": "^0.4.5"
