fix remote clean and deploy task

--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
     "siteTitle": "RAE",
     "siteDescription": "LESS/CSS Framework",
     "siteURL": "http://www.rae.fi",
+    "siteAuthor": "RAE",
     "analyticsUA": "UA-XXXXX-X",
     "shareImageURL": "http://www.rae.fi/images/favicons/open-graph.png",
     "twitterHandle": "@domain",
