add dev and prod ftp deployment to gulpfile

--- a/config-ftp-sample.json
+++ b/config-ftp-sample.json
@@ -1,5 +1,12 @@
 {
-    "server": {
+    "development": {
+        "host": "ftp.myserver.com",
+        "user": "username",
+        "password": "password",
+        "port": "21",
+        "remotePath": ""
+    },
+    "production": {
         "host": "ftp.myserver.com",
         "user": "username",
         "password": "password",
