--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "RAE-Framework",
   "version": "2.3.0",
   "dependencies": {
-    "jquery": "~3.0.0"
+    "jquery": "^3.1.0"
   },
   "overrides": {
     "BOWER-PACKAGE-NAME": {
