--- a/config.json
+++ b/config.json
@@ -10,21 +10,15 @@
       "ie >= 9"
     ],
 
+    "wordpressTheme": false,
+
     "siteTitle": "RAE",
     "siteDescription": "LESS/CSS Framework",
+    "siteKeywords": "css, html, design",
     "siteURL": "http://www.rae.fi",
     "siteAuthor": "RAE",
     "analyticsUA": "UA-XXXXX-X",
     "shareImageURL": "http://www.rae.fi/images/favicons/open-graph.png",
     "twitterHandle": "@domain",
-    "faviconsPath": "images/favicons",
-
-
-    "iconfont": {
-        "fontName": "icons",
-        "className": "icon",
-        "gridSize": 32,
-        "baselineShift": 5,
-        "autohint": true
-    }
+    "faviconsPath": "images/favicons"
 }
