--- a/package.json
+++ b/package.json
@@ -23,38 +23,41 @@
   "license": "MIT",
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
-    "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.13.0",
+    "autoprefixer": "^6.4.1",
+    "browser-sync": "^2.15.0",
     "css-mqpacker": "^5.0.1",
-    "cssnano": "^3.7.1",
-    "del": "^2.2.1",
+    "cssnano": "^3.7.4",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
-    "gulp-changed": "^1.3.0",
+    "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-consolidate": "^0.2.0",
     "gulp-favicons": "^2.2.6",
-    "gulp-header": "^1.8.7",
+    "gulp-header": "^1.8.8",
     "gulp-htmlclean": "^2.7.6",
     "gulp-iconfont": "^8.0.1",
     "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-inject-string": "^1.1.0",
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.2.4",
+    "gulp-newer": "^1.2.0",
     "gulp-postcss": "^6.1.1",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-size": "^2.1.0",
+    "gulp-svg-sprite": "^1.3.6",
     "gulp-task-listing": "^1.0.1",
     "gulp-ttf2woff": "^1.1.0",
     "gulp-ttf2woff2": "^2.0.2",
-    "gulp-uglify": "^1.5.4",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
-    "jshint-stylish": "^2.2.0",
-    "lodash": "^4.13.1",
+    "jshint": "^2.9.3",
+    "jshint-stylish": "^2.2.1",
+    "lodash": "^4.15.0",
     "main-bower-files": "^2.13.1",
     "minimist": "^1.2.0",
     "run-sequence": "^1.2.2",
@@ -62,8 +65,5 @@
   },
   "scripts": {
     "test": "gulp"
-  },
-  "dependencies": {
-    "gulp-newer": "^1.2.0"
   }
 }
