--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "RAE-Framework",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "dependencies": {
-    "jquery": "^3.1.0"
+    "jquery": "^3.2.1"
   },
   "overrides": {
-    "BOWER-PACKAGE-NAME": {
+    "EXAMPLE-PACKAGE-NAME": {
       "main": [
         "**/*.js",
         "filename.js"
