--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "rae-framework",
-    "version": "2.4.0",
-    "description": "LESS/CSS Framework",
-    "author": "RAE – Jere Paajanen <https://rae.fi>",
-    "homepage": "http://www.rae.fi",
-    "main": "gulpfile.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/jerepaajanen/RAE-Framework.git"
-    },
-    "keywords": [
+  "name": "rae-framework",
+  "version": "2.4.0",
+  "description": "LESS/CSS Framework",
+  "author": "RAE – Jere Paajanen <https://rae.fi>",
+  "homepage": "http://www.rae.fi",
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jerepaajanen/RAE-Framework.git"
+  },
+  "keywords": [
     "rae-framework",
     "css",
     "less",
@@ -20,51 +20,57 @@
     "workflow",
     "responsive"
   ],
-    "license": "MIT",
-    "devDependencies": {
-        "apache-server-configs": "^2.14.0",
-        "autoprefixer": "^7.1.1",
-        "browser-sync": "^2.18.8",
-        "css-mqpacker": "^6.0.0",
-        "cssnano": "^3.10.0",
-        "del": "^2.2.2",
-        "gulp": "^3.9.1",
-        "gulp-cache": "^0.4.6",
-        "gulp-changed": "^3.1.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-consolidate": "^0.2.0",
-        "gulp-favicons": "^2.2.7",
-        "gulp-header": "^1.8.8",
-        "gulp-htmlclean": "^2.7.11",
-        "gulp-if": "^2.0.2",
-        "gulp-imagemin": "^3.2.0",
-        "gulp-inject-string": "^1.1.0",
-        "gulp-jshint": "^2.0.4",
-        "gulp-less": "^3.3.0",
-        "gulp-load-plugins": "^1.5.0",
-        "gulp-newer": "^1.3.0",
-        "gulp-postcss": "^7.0.0",
-        "gulp-preprocess": "^2.0.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-replace": "^0.5.4",
-        "gulp-size": "^2.1.0",
-        "gulp-svg-sprite": "^1.3.6",
-        "gulp-svgmin": "^1.2.3",
-        "gulp-task-listing": "^1.0.1",
-        "gulp-uglify": "^3.0.0",
-        "gulp-util": "^3.0.8",
-        "jshint": "^2.9.4",
-        "jshint-stylish": "^2.2.1",
-        "lodash": "^4.17.4",
-        "main-bower-files": "^2.13.1",
-        "minimist": "^1.2.0",
-        "run-sequence": "^1.2.2",
-        "vinyl-ftp": "^0.6.0"
-    },
-    "engines": {
-        "node": "6.6.0"
-    },
-    "scripts": {
-        "test": "gulp"
-    }
+  "license": "MIT",
+  "devDependencies": {
+    "apache-server-configs": "^2.14.0",
+    "autoprefixer": "^7.1.1",
+    "browser-sync": "^2.18.8",
+    "css-mqpacker": "^6.0.0",
+    "cssnano": "^3.10.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-cache": "^0.4.6",
+    "gulp-changed": "^3.1.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-consolidate": "^0.2.0",
+    "gulp-favicons": "^2.2.7",
+    "gulp-header": "^1.8.8",
+    "gulp-htmlclean": "^2.7.11",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-inject-string": "^1.1.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^3.3.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-size": "^2.1.0",
+    "gulp-svg-sprite": "^1.3.6",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-task-listing": "^1.0.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "lodash": "^4.17.4",
+    "main-bower-files": "^2.13.1",
+    "minimist": "^1.2.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-ftp": "^0.6.0"
+  },
+  "engines": {
+    "node": "6.6.0"
+  },
+  "scripts": {
+    "test": "gulp"
+  },
+  "dependencies": {
+    "browser-sync": "^2.18.12",
+    "css-mqpacker": "^6.0.1",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-svg-sprite": "^1.3.7"
+  }
 }
