--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "browser-sync": "^2.18.8",
     "css-mqpacker": "^6.0.0",
     "cssnano": "^3.10.0",
-    "del": "^2.2.2",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.6",
     "gulp-changed": "^3.1.0",
@@ -46,7 +46,7 @@
     "gulp-postcss": "^7.0.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
+    "gulp-replace": "^0.6.1",
     "gulp-size": "^2.1.0",
     "gulp-svg-sprite": "^1.3.6",
     "gulp-svgmin": "^1.2.3",
@@ -58,6 +58,7 @@
     "lodash": "^4.17.4",
     "main-bower-files": "^2.13.1",
     "minimist": "^1.2.0",
+    "postcss-flexbugs-fixes": "^3.0.0",
     "run-sequence": "^1.2.2",
     "vinyl-ftp": "^0.6.0"
   },
@@ -68,9 +69,7 @@
     "test": "gulp"
   },
   "dependencies": {
-    "browser-sync": "^2.18.12",
-    "css-mqpacker": "^6.0.1",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-svg-sprite": "^1.3.7"
+    "gulp-less": "^3.3.2",
+    "jshint": "^2.9.5"
   }
 }
