--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
   "name": "rae-framework",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "svgxuse": "^1.2.6",
+    "object-fit-images": "*"
   },
   "overrides": {
     "example-package-name": {
