--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "siteURL": "http://www.rae.fi",
     "siteAuthor": "RAE",
     "analyticsUA": "UA-XXXXX-X",
-    "shareImageURL": "http://www.rae.fi/images/favicons/open-graph.png",
+    "shareImageURL": "http://www.rae.fi/images/open-graph.png",
     "twitterHandle": "@domain",
     "faviconsPath": "images/favicons",
     "faviconsBackground": "#ffffff"
