--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rae-framework",
-  "version": "2.5.0",
-  "description": "LESS/CSS Framework",
+  "version": "3.0.0",
+  "description": "CSS Framework",
   "author": "RAE – Jere Paajanen <https://rae.fi>",
   "homepage": "http://www.rae.fi",
   "main": "gulpfile.js",
@@ -22,22 +22,22 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "apache-server-configs": "^2.14.0",
-    "autoprefixer": "^7.1.2",
+    "apache-server-configs": "^2.15.0",
+    "autoprefixer": "^7.1.6",
     "browser-sync": "^2.18.13",
     "css-mqpacker": "^6.0.0",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.6",
-    "gulp-changed": "^3.1.0",
+    "gulp-cache": "^0.5.0",
+    "gulp-changed": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
     "gulp-favicons": "^2.2.7",
     "gulp-header": "^1.8.9",
     "gulp-htmlclean": "^2.7.15",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.3.0",
+    "gulp-imagemin": "^3.4.0",
     "gulp-inject-string": "^1.1.0",
     "gulp-jshint": "^2.0.4",
     "gulp-less": "^3.3.2",
@@ -60,6 +60,7 @@
     "minimist": "^1.2.0",
     "postcss-flexbugs-fixes": "^3.2.0",
     "run-sequence": "^2.1.0",
+    "stylelint": "^8.2.0",
     "vinyl-ftp": "^0.6.0"
   },
   "engines": {
