remove clearfix from flexgrid container

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rae-framework",
-  "version": "3.0.0",
+  "version": "3.0.0.beta",
   "description": "CSS Framework",
   "author": "RAE – Jere Paajanen <https://rae.fi>",
   "homepage": "http://www.rae.fi",
