--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
   "name": "rae-framework",
-  "version": "2.5.0",
+  "version": "3.0.0.beta",
   "dependencies": {
     "jquery": "^3.2.1",
-    "svgxuse": "^1.2.6",
-    "object-fit-images": "*"
+    "svgxuse": "^1.2.6"
   },
   "overrides": {
     "example-package-name": {
