--- a/package.json
+++ b/package.json
@@ -22,20 +22,28 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "ansi-colors": "^1.1.0",
     "apache-server-configs": "^2.15.0",
     "autoprefixer": "^8.0.0",
+    "browser-sync": "^2.18.13",
+    "css-mqpacker": "^6.0.0",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-cache": "^1.0.2",
+    "gulp-changed": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
     "gulp-favicons": "^2.2.7",
     "gulp-header": "^2.0.1",
+    "gulp-htmlclean": "^2.7.15",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
-    "gulp-less": "^3.5.0",
+    "gulp-inject-string": "^1.1.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^4.0.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-postcss": "^7.0.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
@@ -44,24 +52,16 @@
     "gulp-svgmin": "^1.2.3",
     "gulp-task-listing": "^1.0.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
+    "lodash": "^4.17.4",
     "main-bower-files": "^2.13.1",
     "minimist": "^1.2.0",
-      "browser-sync": "^2.23.6",
-    "css-mqpacker": "^6.0.2",
-    "gulp-changed": "^3.2.0",
-    "gulp-htmlclean": "^2.7.20",
-    "gulp-inject-string": "^1.1.1",
-    "gulp-jshint": "^2.1.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-postcss": "^7.0.1",
-    "lodash": "^4.17.5",
-    "postcss-flexbugs-fixes": "^3.3.0",
-    "run-sequence": "^2.2.1",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "run-sequence": "^2.1.0",
     "stylelint": "^9.0.0",
-    "vinyl-ftp": "^0.6.1"
+    "through2": "^2.0.3",
+    "vinyl-ftp": "^0.6.0"
   },
   "engines": {
     "node": "6.6.0"
@@ -69,7 +69,5 @@
   "scripts": {
     "test": "gulp"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
