--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "jshint": "^2.9.5",
         "jshint-stylish": "^2.2.1",
         "lodash": "^4.17.4",
-        "main-yarn-files": "^3.0.4",
+        "main-bower-files": "^2.13.1",
         "minimist": "^1.2.0",
         "postcss-flexbugs-fixes": "^3.2.0",
         "postcss-object-fit-images": "^1.1.2",
