--- a/package.json
+++ b/package.json
@@ -1,82 +1,64 @@
 {
-    "name": "rae-framework",
-    "version": "3.1.0",
-    "description": "CSS Framework",
-    "author": "RAE – Jere Paajanen <https://rae.fi>",
-    "homepage": "http://www.rae.fi",
-    "main": "gulpfile.js",
-    "repository": "https://github.com/jerepaajanen/RAE-Framework.git",
-    "keywords": [
+  "name": "rae-framework",
+  "version": "3.1.0",
+  "description": "CSS Framework",
+  "author": "RAE – Jere Paajanen <https://rae.fi>",
+  "homepage": "http://www.rae.fi",
+  "main": "gulpfile.js",
+  "repository": "https://github.com/jerepaajanen/RAE-Framework.git",
+  "keywords": [
     "css",
     "less",
     "framework"
   ],
-    "license": "MIT",
-    "devDependencies": {
-        "ansi-colors": "^1.1.0",
-        "apache-server-configs": "^2.15.0",
-        "autoprefixer": "^8.0.0",
-        "browser-sync": "^2.18.13",
-        "css-mqpacker": "^6.0.0",
-        "cssnano": "^3.10.0",
-        "del": "^3.0.0",
-        "gulp": "^3.9.1",
-        "gulp-changed": "^3.1.1",
-        "gulp-concat": "^2.6.1",
-        "gulp-consolidate": "^0.2.0",
-        "gulp-favicons": "^2.2.7",
-        "gulp-header": "^2.0.1",
-        "gulp-htmlclean": "^2.7.15",
-        "gulp-if": "^2.0.2",
-        "gulp-imagemin": "^4.1.0",
-        "gulp-inject-string": "^1.1.0",
-        "gulp-jshint": "^2.0.4",
-        "gulp-less": "^4.0.0",
-        "gulp-load-plugins": "^1.5.0",
-        "gulp-newer": "^1.3.0",
-        "gulp-postcss": "^7.0.0",
-        "gulp-preprocess": "^2.0.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-replace": "^0.6.1",
-        "gulp-size": "^3.0.0",
-        "gulp-svg-sprite": "^1.3.7",
-        "gulp-svgmin": "^1.2.3",
-        "gulp-task-listing": "^1.0.1",
-        "gulp-uglify": "^3.0.0",
-        "jshint": "^2.9.5",
-        "jshint-stylish": "^2.2.1",
-        "lodash": "^4.17.4",
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-        "main-yarn-files": "^3.0.4",
->>>>>>> parent of aed3b52... back to bower
-=======
-        "main-yarn-files": "^3.0.4",
->>>>>>> parent of aed3b52... back to bower
-        "minimist": "^1.2.0",
-        "npmfiles": "^0.1.1",
-        "postcss-flexbugs-fixes": "^3.2.0",
-        "postcss-object-fit-images": "^1.1.2",
-        "run-sequence": "^2.1.0",
-        "stylelint": "^9.0.0",
-        "through2": "^2.0.3",
-        "vinyl-ftp": "^0.6.0"
-    },
-    "engines": {
-        "node": "^6.10.0"
-    },
-    "scripts": {
-        "test": "gulp"
-    },
-    "dependencies": {
-        "jquery": "^3.3.1",
-        "object-fit-images": "^3.2.3",
-        "svgxuse": "^1.2.6"
-    },
-    "overrides": {
-        "NPM-PACKAGE": {
-            "main": ["**/*.js", "filename.js"]
-        }
-    }
+  "license": "MIT",
+  "devDependencies": {
+    "ansi-colors": "^1.1.0",
+    "apache-server-configs": "^2.15.0",
+    "autoprefixer": "^8.0.0",
+    "browser-sync": "^2.18.13",
+    "css-mqpacker": "^6.0.0",
+    "cssnano": "^3.10.0",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^3.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-consolidate": "^0.2.0",
+    "gulp-favicons": "^2.2.7",
+    "gulp-header": "^2.0.1",
+    "gulp-htmlclean": "^2.7.15",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-inject-string": "^1.1.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^4.0.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.6.1",
+    "gulp-size": "^3.0.0",
+    "gulp-svg-sprite": "^1.3.7",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-task-listing": "^1.0.1",
+    "gulp-uglify": "^3.0.0",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
+    "lodash": "^4.17.4",
+    "main-bower-files": "^2.13.1",
+    "minimist": "^1.2.0",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-object-fit-images": "^1.1.2",
+    "run-sequence": "^2.1.0",
+    "stylelint": "^9.0.0",
+    "through2": "^2.0.3",
+    "vinyl-ftp": "^0.6.0"
+  },
+  "engines": {
+    "node": "^6.10.0"
+  },
+  "scripts": {
+    "test": "gulp"
+  }
 }
