--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-  "name": "rae-framework",
-  "version": "3.1.0",
-  "description": "CSS Framework",
-  "author": "RAE – Jere Paajanen <https://rae.fi>",
-  "homepage": "http://www.rae.fi",
-  "main": "gulpfile.js",
-  "repository": "https://github.com/jerepaajanen/RAE-Framework.git",
-  "keywords": [
-    "css",
-    "less",
-    "framework"
-  ],
-  "license": "MIT",
-  "devDependencies": {
-    "ansi-colors": "^3.2.4",
-    "apache-server-configs": "^3.1.0",
-    "autoprefixer": "^9.5.0",
-    "browser-sync": "^2.26.5",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-changed": "^3.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-consolidate": "^0.2.0",
-    "gulp-favicons": "^2.2.7",
-    "gulp-header": "^2.0.7",
-    "gulp-htmlclean": "^2.7.22",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-inject-string": "^1.1.2",
-    "gulp-jshint": "^2.0.4",
-    "gulp-less": "^4.0.1",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-newer": "^1.3.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-preprocess": "^3.0.2",
-    "gulp-rename": "^1.4.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-size": "^3.0.0",
-    "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-task-listing": "^1.1.0",
-    "gulp-uglify": "^3.0.2",
-    "jshint": "^2.10.2",
-    "jshint-stylish": "^2.2.1",
-    "lodash": "^4.17.11",
-    "main-bower-files": "^2.13.1",
-    "minimist": "^1.2.0",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-object-fit-images": "^1.1.2",
-    "run-sequence": "^2.1.0",
-    "stylelint": "^9.10.1",
-    "through2": "^2.0.5",
-    "vinyl-ftp": "^0.6.0"
-  },
-  "engines": {
-    "node": "^8.16.0"
-  },
-  "scripts": {
-    "test": "gulp"
-  }
+    "name": "rae-framework",
+    "version": "3.1.0",
+    "description": "CSS Framework",
+    "author": "RAE – Jere Paajanen <https://rae.fi>",
+    "homepage": "http://www.rae.fi",
+    "main": "gulpfile.js",
+    "repository": "https://github.com/jerepaajanen/RAE-Framework.git",
+    "keywords": [
+        "css",
+        "less",
+        "framework"
+    ],
+    "license": "MIT",
+    "devDependencies": {
+        "ansi-colors": "^3.2.4",
+        "apache-server-configs": "^3.2.1",
+        "autoprefixer": "^9.7.0",
+        "browser-sync": "^2.26.7",
+        "css-mqpacker": "^7.0.0",
+        "cssnano": "^4.1.10",
+        "del": "^3.0.0",
+        "favicons": "^5.4.1",
+        "gulp": "^3.9.1",
+        "gulp-changed": "^3.1.1",
+        "gulp-concat": "^2.6.1",
+        "gulp-consolidate": "^0.2.0",
+        "gulp-favicons": "^2.2.7",
+        "gulp-header": "^2.0.9",
+        "gulp-htmlclean": "^2.7.22",
+        "gulp-if": "^2.0.2",
+        "gulp-imagemin": "^4.1.0",
+        "gulp-inject-string": "^1.1.2",
+        "gulp-jshint": "^2.0.4",
+        "gulp-less": "^4.0.1",
+        "gulp-load-plugins": "^1.6.0",
+        "gulp-newer": "^1.3.0",
+        "gulp-postcss": "^8.0.0",
+        "gulp-preprocess": "^3.0.3",
+        "gulp-rename": "^1.4.0",
+        "gulp-replace": "^1.0.0",
+        "gulp-size": "^3.0.0",
+        "gulp-svg-sprite": "^1.5.0",
+        "gulp-svgmin": "^2.2.0",
+        "gulp-task-listing": "^1.1.0",
+        "gulp-uglify": "^3.0.2",
+        "jshint": "^2.10.2",
+        "jshint-stylish": "^2.2.1",
+        "lodash": "^4.17.15",
+        "main-bower-files": "^2.13.3",
+        "minimist": "^1.2.0",
+        "postcss-flexbugs-fixes": "^4.1.0",
+        "postcss-object-fit-images": "^1.1.2",
+        "run-sequence": "^2.1.0",
+        "stylelint": "^9.10.1",
+        "through2": "^2.0.5",
+        "vinyl-ftp": "^0.6.0"
+    },
+    "engines": {
+        "node": "^8.16.0"
+    },
+    "scripts": {
+        "test": "gulp"
+    }
 }
