--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rae-framework",
-    "version": "3.2.0",
+    "version": "3.3.0",
     "description": "CSS Framework",
     "author": "RAE – Jere Paajanen <https://rae.fi>",
     "homepage": "http://www.rae.fi",
@@ -14,9 +14,9 @@
     "license": "MIT",
     "devDependencies": {
         "ansi-colors": "^4.1.1",
-        "apache-server-configs": "^3.2.1",
-        "autoprefixer": "^9.7.0",
-        "browser-sync": "^2.26.7",
+        "apache-server-configs": "^4.0.0",
+        "autoprefixer": "^10.0.0",
+        "browser-sync": "^2.26.12",
         "css-mqpacker": "^7.0.0",
         "cssnano": "^4.1.10",
         "del": "^5.1.0",
@@ -24,35 +24,37 @@
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.1",
         "gulp-consolidate": "^0.2.0",
+        "gulp-exec": "^4.0.0",
         "gulp-favicons": "^2.3.1",
         "gulp-header": "^2.0.9",
         "gulp-htmlclean": "^2.7.22",
         "gulp-if": "^3.0.0",
-        "gulp-imagemin": "^6.2.0",
+        "gulp-imagemin": "^7.1.0",
         "gulp-inject-string": "^1.1.2",
         "gulp-jshint": "^2.1.0",
         "gulp-less": "^4.0.1",
         "gulp-newer": "^1.3.0",
-        "gulp-postcss": "^8.0.0",
+        "gulp-postcss": "^9.0.0",
         "gulp-preprocess": "^3.0.3",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
+        "gulp-shell": "^0.8.0",
         "gulp-size": "^3.0.0",
         "gulp-svg-sprite": "^1.5.0",
-        "gulp-svgmin": "^2.2.0",
+        "gulp-svgmin": "^3.0.0",
         "gulp-uglify": "^3.0.2",
-        "jshint": "^2.10.3",
+        "jshint": "^2.12.0",
         "jshint-stylish": "^2.2.1",
         "lodash": "^4.17.15",
         "main-bower-files": "^2.13.3",
         "minimist": "^1.2.0",
-        "postcss-flexbugs-fixes": "^4.1.0",
+        "postcss-flexbugs-fixes": "^4.2.1",
         "postcss-object-fit-images": "^1.1.2",
         "through2": "^3.0.1",
         "vinyl-ftp": "^0.6.0"
     },
     "engines": {
-        "node": "^8.16.0"
+        "node": "^10.22.0"
     },
     "scripts": {
         "test": "gulp"
