--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
         "css-mqpacker": "^7.0.0",
         "cssnano": "^4.1.10",
         "del": "^5.1.0",
-        "favicons": "^5.4.1",
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.1",
         "gulp-consolidate": "^0.2.0",
         "gulp-exec": "^4.0.0",
-        "gulp-favicons": "^2.3.1",
+        "gulp-favicons": "^2.4.0",
         "gulp-header": "^2.0.9",
         "gulp-htmlclean": "^2.7.22",
         "gulp-if": "^3.0.0",
@@ -48,13 +47,14 @@
         "lodash": "^4.17.15",
         "main-bower-files": "^2.13.3",
         "minimist": "^1.2.0",
+        "postcss": "^8.0.9",
         "postcss-flexbugs-fixes": "^4.2.1",
         "postcss-object-fit-images": "^1.1.2",
         "through2": "^3.0.1",
         "vinyl-ftp": "^0.6.0"
     },
     "engines": {
-        "node": "^10.22.0"
+        "node": "^12.18.0"
     },
     "scripts": {
         "test": "gulp"
