purge css + purge css wordpress

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     ],
     "license": "MIT",
     "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^4.0.3",
         "ansi-colors": "^4.1.1",
         "apache-server-configs": "^4.1.0",
         "autoprefixer": "^10.2.4",
         "browser-sync": "^2.26.14",
         "css-mqpacker": "^7.0.0",
-        "cssnano": "^4.1.10",
+        "cssnano": "^5.0.0",
         "del": "^6.0.0",
         "gulp": "^4.0.2",
         "gulp-concat": "^2.6.1",
@@ -49,8 +50,9 @@
         "lodash": "^4.17.21",
         "main-bower-files": "^2.13.3",
         "minimist": "^1.2.5",
-        "postcss": "^8.2.6",
+        "postcss": "^8.2.10",
         "postcss-flexbugs-fixes": "^5.0.2",
+        "purgecss-with-wordpress": "^4.0.3",
         "streamqueue": "^1.1.2",
         "through2": "^4.0.2",
         "vinyl-ftp": "^0.6.0"
